samples/_failures_safe/1761156384_01eb66_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ead5968d.c: In function ‘main’:
./samples/SAFE/__tmp_ead5968d.c:182:9: error: expected declaration or statement at end of input
  182 |         printf("Invalid choice\n");
      |         ^~~~~~
./samples/SAFE/__tmp_ead5968d.c:182:9: error: expected declaration or statement at end of input
